# td_palletizing

./: CMakeLists.txt  README.md  json.txt  package.xml
code/: TA_Mission.py  TA_Mission_python.py  TA_Mission_two.py  TA_Vision.py  TA_Vision_two.py  client_ros_python.py
code/backup/: TA_Vision_python.py  client_ros.py  setup.py
deb/ubuntu18-melodic/: ros-melodic-td-palletizing_0.0.0-0bionic_arm64.deb
deb/ubuntu20-noetic/: ros-noetic-td-palletizing_0.0.0-0focal_arm64.deb
launch/: Palletizing_TEST.launch  TD_Palletizing.launch  ZY_TD.launch  ZY_TD_two.launch
scripts/: TA_Mission.py  TA_Vision.py  TA_Vision_two.py  client_ros.py
src/: palletizing.cpp  palletizing_test.cpp
